--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <button id="button">Bouton</button>
+
+    <button id="buttonClose">Bouton 2</button>
 
     <script src="app.js"></script>
 </body>
